--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <title>Memory game</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="style.css">
+
     <script src="script.js"></script>
 </head>
 <body>
     <main>
-
+        <div id="title">
+            <h1>Memory game</h1>
+        </div>
+        <div id="board">
+            <div class="tile">
+                <img src="images/1.png">
+            </div>
+        </div>
     </main>
     <footer>
 
