Added random board creation. Added basic styling for the board. resolve #3

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <main>
@@ -15,9 +15,6 @@
             <h1>Memory game</h1>
         </div>
         <div id="board">
-            <div class="tile">
-                <img src="images/1.png">
-            </div>
         </div>
     </main>
     <footer>
