--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div id="title">
             <h1>Memory game</h1>
         </div>
+        <div id="score-container">
+            <p>Time:</p>
+            <p id="score">00:00:00</p>
+        </div>
         <div id="board">
         </div>
     </main>
