--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
         <div id="title">
             <h1>Memory game</h1>
         </div>
+        <div id="highscore-container">
+            <p>Best Time:</p>
+            <p id="highscore">00:00:00</p>
+        </div>
         <div id="score-container">
             <p>Time:</p>
             <p id="score">00:00:00</p>
         </div>
         <div id="board">
+            <div id="start-container">
+                <button onclick="initialize(18)">Start</button>
+            </div>
         </div>
     </main>
     <footer>
