Added footer with basic styling. resolve #8

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <title>Memory game</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Wojciech Kowner">
+    <meta name="description" content="Simple static web memory game">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="footer-style.css">
 
     <script src="script.js" defer></script>
 </head>
@@ -29,7 +32,25 @@
         </div>
     </main>
     <footer>
-
+        <p>Designed & Created by Wojciech Kowner</p>
+        <div>
+            <a href="mailto:wojciech.kowner@gmail.com">
+                <p>E-mail</p>
+                <img src="images/mail-icon-white.png">
+            </a>
+        </div>
+        <div>
+            <a href="https://www.linkedin.com/in/wojciech-kowner-185367262">
+                <p>LinkedIn profile</p>
+                <img src="images/linkedin-mark-white.png">
+            </a>
+        </div>
+        <div>
+            <a href="https://github.com/Nafai7">
+                <p>GitHub profile</p>
+                <img src="images/github-mark-white.png">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
